2011-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: new '--client-verbose' option.
	* man/xml-source/amcheck.8.xml: Document --client-verbos
	* config/amanda/progs.m4 (AMANDA_PROG_UNAME): new macro to find uname
	  path.
	* configure.in: call AMANDA_PROG_UNAME.
	* client-src/client_util.c (check_access, check_file, check_dir,
	  check_suid): return a gboolean.
	* client-src/client_util.h: Change prototypes.
	* client-src/selfcheck.c: Print the platform.
	* common-src/util.c (get_first_line): new function to return the first
	  output line of a command.
	* common-src/util.h (get_first_line): add prototype.
	* application-src/amgtar.c, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amstar.c, application-src/amsuntar.pl,
	  application-src/amzfs-sendrecv.pl: print version of program.

2011-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix warning if $s is not used.

2011-07-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Support minimun number of digit in $3s
	  autolabel template.
	* man/xml-source/amanda.conf.5.xml: Document it.
  
2011-07-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm (do_release): Support eject params.
	* perl/Amanda/Changer/single.pm (do_release): Do the eject correctly.

2011-07-21  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-taperscan.7.xml: Typo.

2011-07-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h: Add CONF_EJECT_VOLUME
	* common-src/conffile.c: Add CNF_EJECT_VOLUME
	* man/xml-source/amanda.conf.5.xml: Document eject-volume.
	* perl/Amanda/Config.swg: Add CNF_EJECT_VOLUME.
	* perl/Amanda/Changer/single.pm: Eject the device if the eject
	  params is set in $res->release()
	* perl/Amanda/Taper/Scribe.pm (new): Get eject_volume params.
	* perl/Amanda/Taper/Scribe.pm (_release_reservation): Call